about us page is ok for now

--- a/RhythmicRealm/RhythmicRealm.UI/Views/AboutUs/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/AboutUs/Index.cshtml
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Hexashop - About Page</title>
+    <title>RhythmicRealm-About Page</title>
 
 
     <!-- Additional CSS Files -->
@@ -87,12 +87,12 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="left-image">
-                        <img src="~/aboutus/images/about-left-image.jpg" alt="">
+                        <img src="~/aboutus/images/aboutus.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="right-content">
-                        <h4>About Us &amp; Our Skills</h4>
+                        <h4>Nasıl Başladık?</h4>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore.</span>
                         <div class="quote">
                             <i class="fa fa-quote-left"></i><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuski smod kon tempor incididunt ut labore.</p>
@@ -117,8 +117,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Our Amazing Team</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Rhythmic Realm Eğitimler</h2>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -134,32 +133,11 @@
                                     </ul>
                                 </div>
                             </div>
-                            <img src="~/aboutus/images/team-member-01.jpg">
+                            <img src="~/aboutus/images/egitim1.png">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
-                            <span>Product Caretaker</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="team-item">
-                        <div class="thumb">
-                            <div class="hover-effect">
-                                <div class="inner-content">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <img src="~/aboutus/images/team-member-02.jpg">
-                        </div>
-                        <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
-                            <span>Product Caretaker</span>
+                            <h4>Uzaktan Elektro Gitar Eğitimi</h4>
+                            <span>Rhythmic Realm Akademi'de'</span>
                         </div>
                     </div>
                 </div>
@@ -176,11 +154,95 @@
                                     </ul>
                                 </div>
                             </div>
-                            <img src="~/aboutus/images/team-member-03.jpg">
+                            <img src="~/aboutus/images/egitim2.png">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
-                            <span>Product Caretaker</span>
+                            <h4>Uzaktan Keman Eğitimi</h4>
+                            <span>Rhythmic Realm Akademi'de'</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-item">
+                        <div class="thumb">
+                            <div class="hover-effect">
+                                <div class="inner-content">
+                                    <ul>
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <img src="~/aboutus/images/egitim3.png">
+                        </div>
+                        <div class="down-content">
+                            <h4>Uzaktan Piyano Eğitimi</h4>
+                            <span>Rhythmic Realm Akademi'de'</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-item">
+                        <div class="thumb">
+                            <div class="hover-effect">
+                                <div class="inner-content">
+                                    <ul>
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <img src="~/aboutus/images/egitim4.png">
+                        </div>
+                        <div class="down-content">
+                            <h4>Uzaktan Saksafon Eğitimi</h4>
+                            <span>Rhythmic Realm Akademi'de'</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-item">
+                        <div class="thumb">
+                            <div class="hover-effect">
+                                <div class="inner-content">
+                                    <ul>
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <img src="~/aboutus/images/egitim5.png">
+                        </div>
+                        <div class="down-content">
+                            <h4>Uzaktan Çello Eğitimi</h4>
+                            <span>Rhythmic Realm Akademi'de'</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="team-item">
+                        <div class="thumb">
+                            <div class="hover-effect">
+                                <div class="inner-content">
+                                    <ul>
+                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <img src="~/aboutus/images/egitim6.png">
+                        </div>
+                        <div class="down-content">
+                            <h4>Uzaktan Davul Eğitimi</h4>
+                            <span>Rhythmic Realm Akademi'de'</span>
                         </div>
                     </div>
                 </div>
@@ -195,31 +257,35 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Our Services</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Rhythmic Realm Blog</h2>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <h4>Vokal Kaydı İçin Başlangıç Rehberi</h4>
+                        <p class="truncate">Ses kayıt mühendisleri, kayıt stüdyosunda evrensel gerçeği kabul ederler: Hazırlık önemlidir. Kayıt aşamasını başarılı bir şekilde tamamlamazsanız tüm parça amatörce gelebilir. Ayrıca, çok geç olduğunda kötü bir kayıt yaptığınızı fark etmekten daha kötü bir şey yoktur. Bu blog yazısı, vokal kayıtlarınızda başarıya ulaşmanız için kendinizi hazırlamanızı sağlayacak ipuçlarını içeriyor. Hadi başlayalım!</p>
+                        <p class="more"><a href="https://blog.do-re.com.tr/vokal-kaydi-icin-baslangic-rehberi/">Devamını Oku...</a></p>
+                        <img src="~/aboutus/images/blog1.png">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Synther Vaporware</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
-                        <img src="~/aboutus/images/service-01.jpg" alt="">
+                        <h4>Novation Components  Dark Techno Paketi</h4>
+                        <p class="truncate">Components, Novation ürün merkezinizdir. Yeni ses paketlerine erişebilir, ses içeriğinizi yönetebilir, cihazınızı özelleştirebilir ve en son yazılımı takip edebilirsiniz.</p>
+                        <p class="more"><a href="https://blog.do-re.com.tr/novation-components-yeni-dark-techno-paketi/">Devamını Oku...</a></p>
+                        <img src="~/aboutus/images/blog2.png">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Locavore Squidward</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
-                        <img src="~/aboutus/images/service-02.jpg" alt="">
+                        <h4>Davula Başlayanlar İçin Bir Kılavuz</h4>
+                        <p class="truncate">Modern müzisyenler için elektronik bir davul seti, sadece bir davulcu olarak gelişim ve ilerlemenin önemli bir parçası değil, aynı zamanda kullanışlı bir stüdyo veya canlı bir araç olma potansiyeline sahiptir.</p>
+                        <p class="more"><a href="https://blog.do-re.com.tr/davul-calmaya-yeni-baslayanlar-icin-bir-kilavuz/">Devamını Oku...</a></p>
+                        <img src="~/aboutus/images/blog3.png">
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="service-item">
-                        <h4>Health Gothfam</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
-                        <img src="~/aboutus/images/service-03.jpg" alt="">
-                    </div>
-                </div>
+               
             </div>
         </div>
     </section>
@@ -311,23 +377,6 @@
     <!-- Global Init -->
     <script src="~/aboutus/js/custom.js"></script>
 
-   @*  <script>
-
-        $(function() {
-            var selectedClass = "";
-            $("p").click(function(){
-            selectedClass = $(this).attr("data-rel");
-            $("#portfolio").fadeTo(50, 0.1);
-                $("#portfolio div").not("."+selectedClass).fadeOut();
-            setTimeout(function() {
-              $("."+selectedClass).fadeIn();
-              $("#portfolio").fadeTo(50, 1);
-            }, 500);
-                
-            });
-        });
-
-    </script> *@
 
   </body>
 
