--- a/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
@@ -29,12 +29,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/~/Basket/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="~/Basket/assets/css/style.css">
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+
 
 </head>
 <body>
@@ -187,7 +182,10 @@
 											<div class="summary-item">
 												<span class="text">Toplam</span><span class="price">360 TL</span>
 											</div>
-											<button type="button" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</button>
+											<div>
+												<a asp-area="" asp-controller="CheckOut" asp-action="Index" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+											</div>
+										
 										</div>
 									</div>
 								</div>
