--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using RhythmicRealm.UI
 @using RhythmicRealm.Shared.ViewModels.Identity
 @using RhythmicRealm.Shared.ViewModels.ProductViewModels
+@using RhythmicRealm.Shared.ViewModels.BrandViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
