contact page is ok for now. home page view is completed.

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/Login.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/Login.cshtml
@@ -38,14 +38,14 @@
                     </div>
               
                     <div class="row">
-                       @*  <div class="col-8">
+                        <div class="col-8">
                             <div class="icheck-primary">
                                 <input asp-for="RememberMe" type="checkbox" id="remember">
                                 <label for="remember">
                                Beni Hatırla
                                 </label>
                             </div>
-                        </div> *@
+                        </div> 
                     
                         <a asp-area=""
                            asp-controller="Account"
