The products are listed on the store page

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
@@ -38,21 +38,8 @@
 	<nav id="navigation">
 		<!-- container -->
 		<div class="container">
-			<!-- responsive-nav -->
-			<div id="responsive-nav">
-				<!-- NAV -->
-				<ul class="main-nav nav navbar-nav">
-				
-					<li><a href="#">Tuşlular</a></li>
-					<li><a href="#">Telliler</a></li>
-					<li><a href="#">Yaylılar</a></li>
-					<li><a href="#">Nefesliler</a></li>
-					<li><a href="#">Davul Perküsyon</a></li>
-				</ul>
-				</ul>
-				<!-- /NAV -->
-			</div>
-			<!-- /responsive-nav -->
+			
+<vc:navbar-of-main-cat></vc:navbar-of-main-cat>
 		</div>
 		<!-- /container -->
 	</nav>
