--- a/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductViewModel
 
-@await Html.PartialAsync("_NavbarPartial")
+<vc:navbar-of-main-cat></vc:navbar-of-main-cat>
 
 
 <!-- SECTION -->
