--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using RhythmicRealm.Shared.ViewModels.Identity
 @using RhythmicRealm.Shared.ViewModels.ProductViewModels
 @using RhythmicRealm.Shared.ViewModels.BrandViewModels
+@using RhythmicRealm.Shared.ViewModels.MainCategoryViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
